<?xml version="1.0" encoding="UTF-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MainLayout">

    <Button
        android:id="@+id/btnCerrarSesion"
        style="@style/ButtonAmm"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@android:string/untitled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableStart="@drawable/icons8_usuario_32"
        android:drawablePadding="5dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logoImg"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCerrarSesion"
        app:shapeAppearanceOverlay="@style/LogoRedondo" />

    <LinearLayout
        android:id="@+id/navigateButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnServicios"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/btn_servicios"
            style="@style/ButtonAmm"/>

        <Button
            android:id="@+id/btnClientes"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/btn_clientes"
            style="@style/ButtonAmm"/>

        <Button
            android:id="@+id/btnEmpleados"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/btn_empleados"
            style="@style/ButtonAmm"/>

        <Button
            android:id="@+id/btnEquipos"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/btn_equipos"
            style="@style/ButtonAmm"/>

        <Button
            android:id="@+id/btnTipos"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/btn_tipos"
            style="@style/ButtonAmm"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>