<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MainLayout">

    <Button
        android:id="@+id/btnRegresar"
        style="@style/ButtonAmm"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logoImg"
        android:layout_width="271dp"
        android:layout_height="271dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegresar"
        app:shapeAppearanceOverlay="@style/LogoRedondo" />

    <LinearLayout
        android:id="@+id/formRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg"
        android:padding="16dp">

        <EditText
            android:id="@+id/formUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user"
            android:inputType="text"
            android:autofillHints="username"
            style="@style/EditTextInputs"/>

        <EditText
            android:id="@+id/formPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:autofillHints="password"
            style="@style/EditTextInputs"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_marginTop="50dp"
            android:text="@string/btn_registro"
            style="@style/ButtonAmm"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>